<resources>
    <string name="app_name">BitPay</string>
    <string name="title_verification">Verification</string>
    <string name="text_verification_msg">BITPAY will send one time message to verify your phone number(carrier charges may applay).</string>
    <string name="text_read_term">I have read and agree to all</string>
    <string name="text_term_condition"><u>Terms and Conditions.</u></string>
    <string name="title_otp">OTP</string>
    <string name="text_country_code">+91</string>
    <string name="text_enter_mobile_no">Please enter your 10 digit mobile number</string>
    <string name="btn_send_otp">Send Otp</string>
    <string name="btn_resend_otp">ReSend Otp</string>
    <string name="hint_enter_otp">OTP</string>
    <string name="text_wait_time">00:30 sec</string>
    <string name="text_submit">Submit</string>
    <string name="text_forgot_pin"><u>Forgot PIN ?</u></string>
    <string name="messageMobileVerified">Mobile Number Authenticated</string>
    <string name="messageMobileNotVerified">Mobile Number not Authenticated</string>
    <string name="emptyOtp">Please enter OTP</string>
    <string name="messageNoValidated">OTP validation successful</string>
    <string name="messageOtpInvalid">Incorrect OTP</string>
    <string name="messageOtpResent">OTP Resended</string>
    <string name="msg_reg_success">You have successfully registered</string>
    <string name="msg_reg_failed">Verification Failed!</string>
    <string name="msg_reset_pin_failed">Failed to reset your pin</string>
    <string name="text_enter_pin">Please enter a four digit PIN</string>
    <string name="text_note_pin">Please do NOT share your Pin with anyone including BITPAY</string>
    <string name="msgErrorPin">You are left with 0 more attempts</string>
    <string name="msgErrorWrongPin">Wrong PIN</string>
    <string name="title_home">Dashboard</string>
    <string name="title_bit_assress">My Bitcoin Address</string>
    <string name="title_documents">Documents</string>
    <string name="title_contacts">Contacts Book</string>
    <string name="title_buy_bitcoins">Buy Bitcoins</string>
    <string name="title_bank_details">Bank Details</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>
    <string name="title_support">Support</string>
    <string name="title_about_us">About Us</string>
    <string name="nev_home">Dashboard</string>
    <string name="nev_bit_assress">My Bitcoin Address</string>
    <string name="nev_documents">Documents</string>
    <string name="nev_contacts">Contacts Book</string>
    <string name="nev_transactions">Transactions</string>
    <string name="nev_settings">Settings</string>
    <string name="nev_support">Support</string>
    <string name="nev_about_us">About Us</string>
    <string name="message_app_exit">Press again to exit app</string>
    <string name="title_tnx_details">Transaction Details</string>
    <string name="menu_mobile_topup">Mobile Top Up</string>
    <string name="menu_dth_recharge">DTH Recharge</string>
    <string name="menu_buy_sell">Buy Bitcoins</string>
    <string name="menu_sell">Sell Bitcoins</string>
    <string name="menu_send_bitcoin">Transfer Bitcoins</string>
    <string name="menu_receive_bitcoin">Receive Bitcoins</string>
    <string name="menu_gas_bill_pay">Gas Bill Payment</string>
    <string name="menu_electricity_bill_pay">Electricity Bill Payment</string>
    <string name="title_gas_provider">Gas Provider</string>
    <string name="title_electricity_provider">Electricity Provider</string>
    <string name="title_new_pin">PIN</string>
    <string name="title_confirm_pin">Confirm PIN</string>
    <string name="title_old_pin">Old PIN</string>
    <string name="pdialog_message_loading">Loading please wait..</string>
    <string name="alert_message_no_network">Network not available please try again </string>
    <string name="alert_ok_button_text_no_network">ok</string>
    <string name="alert_cancel_button_text_no_network">cancel</string>
    <string name="alert_yes_btn">Yes</string>
    <string name="alert_no_btn">No</string>
    <string name="label_ok_button">ok</string>
    <string name="label_cancel_button">cancel</string>
    <string name="error_phone_no_invalid">Please provide 10 digit mobile number</string>
    <string name="error_dth_no_invalid">Please provide 11 digit dth number start with 0</string>
    <string name="error_additional_zero">Please provide number without zero</string>
    <string name="error_invalid_email_id">Please provide valid email id</string>
    <string name="error_empty_email_id">Please provide  email id</string>
    <string name="nwk_error_sign_up">Verification error</string>
    <string name="nwk_response_sign_up">Verification response</string>
    <string name="nwk_error_reset_pin">Reset Pin error</string>
    <string name="nwk_response_reset_pin">Reset Pin response</string>
    <string name="nwk_error_add_contact">Add Contact error</string>
    <string name="nwk_response_add_contact">Add Contact response</string>
    <string name="nwk_error_get_contact">Get Contact error</string>
    <string name="nwk_response_get_contact">Get Contact response</string>
    <string name="nwk_error_get_balance">Get Current Balance error</string>
    <string name="nwk_response_get_balance">Get Current Balance response</string>
    <string name="nwk_error_get_rate">Get Bitcoin Rate error</string>
    <string name="nwk_response_get_rate">Get Bitcoin Rate response</string>
    <string name="nwk_error_send_bitcoin">Send Bitcoins error</string>
    <string name="nwk_response_send_bitcoin">Send Bitcoins response</string>
    <string name="nwk_error_add_deposit_amt">Deposit Amount error</string>
    <string name="nwk_error_add_bank_detail">Add Bank Details error</string>
    <string name="nwk_response_add_bank_detail">Add Bank Details response</string>
    <string name="nwk_error_add_pan_detail">Add Pancard Details error</string>
    <string name="nwk_response_add_pan_detail">Add Pancard Details response</string>
    <string name="nwk_error_get_bank_details">Get Bank Details error</string>
    <string name="nwk_response_get_bank_details">Get Bank Details response</string>
    <string name="nwk_error_get_pan_details">Get Pancard Details error</string>
    <string name="nwk_response_get_pan_details">Get Pancard Details response</string>
    <string name="nwk_error_buy_bitcoin">Buy Bitcoins error</string>
    <string name="nwk_response_buy_bitcoin">Buy Bitcoins response</string>
    <string name="nwk_error_sell_bitcoin">Sell Bitcoins error</string>
    <string name="nwk_response_sell_bitcoin">Sell Bitcoins response</string>
    <string name="nwk_error_submit_query">Submit query error</string>
    <string name="nwk_response_submit_query">Submit query response</string>
    <string name="nwk_error_edit_profile">Update Profile error</string>
    <string name="nwk_response_edit_profile">Update Profile response</string>
    <string name="nwk_error_get_transaction">Get Transaction error</string>
    <string name="nwk_response_get_transaction">Get Transaction response</string>
    <string name="nwk_response_recharge">Recharge response</string>
    <string name="nwk_error_recharge">Recharge error</string>
    <string name="text_add_contact">Add New Contact</string>
    <string name="hint_edit_contact_name">Name</string>
    <string name="hint_edit_contact_addtrss">Paste or enter bitcoin address</string>
    <string name="btn_add">Add</string>
    <string name="text_no_contact">No contacts found !!</string>
    <string name="msg_add_contact_failed">Failed to add your contact</string>
    <string name="msg_add_contact_suc">Your contact added successfully</string>
    <string name="error_empty_name">Please enter Name</string>
    <string name="error_empty_bit_address">Please enter Bit Address</string>
    <string name="msg_send_bitcoin_failed">Failed to send your bitcoin</string>
    <string name="msg_send_bitcoin_suc">Your bitcoin sended successfully</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_pay">Pay</string>
    <string name="btn_bank_details">See Bank Details</string>
    <string name="btn_submit_request">Submit Deposit Request</string>
    <string name="text_pay_online">Pay Online</string>
    <string name="btn_pay_online">Pay Online</string>
    <string name="btn_home">Home</string>
    <string name="text_current_balance">Your current balance</string>
    <string name="text_buying_rate">1\u0243  Buying rate</string>
    <string name="text_selling_rate">1\u0243 Selling rate</string>
    <string name="text_amt_rate">\u20b9 00</string>
    <string name="text_rs_currency">\u20b9</string>
    <string name="text_bitcoin">\u0243</string>
    <string name="hint_edit_amount">Amount</string>
    <string name="hint_edit_ref_no">Refrence Number</string>
    <string name="text_receiver_name">Receiver Name</string>
    <string name="text_bit_amt">Bit Amount</string>
    <string name="text_rate">Rate</string>
    <string name="btn_proceed">Proceed</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_tnx_id">Transaction ID</string>
    <string name="text_valid_amt"></string>
    <string name="text_min_amt">*Min \u20b9</string>
    <string name="text_max_amt">and Max \u20b9</string>
    <string name="text_max_transfer_amt">*For transferring more than \u20b9 500000, please call on 8267836652</string>
    <string name="text_max_buy_amt">*For buy more than \u20b9 500000, please call on 8267836652</string>
    <string name="text_max_sell_amt">*For sell more than \u20b9 500000, please call on 8267836652</string>
    <string name="error_invalid_amt">Please enter valid amount</string>
    <string name="error_empty_amt">Please enter amount</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_activity">Activities</string>
    <string name="tab_your_activity">Your Activities</string>
    <string name="tab_pancard">Pancard</string>
    <string name="tab_account">Bank Details</string>
    <string name="tab_kyc_details">Kyc Details</string>
    <string name="btn_update">Update</string>
    <string name="text_enter_pancard">Please enter following details as per your PAN CARD</string>
    <string name="hint_edit_first_name">First Name</string>
    <string name="hint_edit_last_name">Last Name</string>
    <string name="text_enter_bank_account">Please enter following details as per your bank account</string>
    <string name="hint_edit_ifsc">IFSC Code</string>
    <string name="hint_edit_bank_name">Bank Name</string>
    <string name="hint_edit_branch_name">Branch Name</string>
    <string name="hint_edit_holder_name">Account Holder Name</string>
    <string name="hint_edit_account_number">Account Number</string>
    <string name="hint_edit_confirm_account">Confirm Account Number</string>
    <string name="text_node1">✔ Please submit correct bank account number details as it can take upto 7 days to update the details.</string>
    <string name="text_node2">✔ NRE/NRI and OCI accounts are not supported.</string>
    <string name="text_node3">✔ Your verification can take upto 3 working days.</string>
    <string name="hint_edit_mobile">Mobile Number</string>
    <string name="text_deposit1">(RTGS/NEFT/IMPS min: 1000 \u20b9, max: 500000 \u20b9)</string>
    <string name="text_deposit2">✔ Cash deposit are strictly not allowed.</string>
    <string name="text_deposit3">✔ Always submit your correct payment reference from your bank statement only.</string>
    <string name="text_deposit4">✔ Payments less than the minimum amount will not be accepted.</string>
    <string name="text_deposit5">✔ Pay only via RTGS, NEFT, IMPS or same bank to bank option only.</string>
    <string name="text_deposit6">✔ In case of any other bank account used for transfer, funds will be returned to you after 15 days and penalty of ₹ 500.</string>
</resources>