<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@drawable/bg_app"
    tools:context="com.bitpay.bitpay.activity.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/logo_verification_page" />

        <TextView
            android:id="@+id/pinDescTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_verification_msg"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_large" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/colorLine" />

        <TextView
            android:id="@+id/enterPinTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/text_enter_mobile_no"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_xXXlarge"
            android:layout_marginRight="@dimen/margin_xXXlarge"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="50dip"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:text="@string/text_country_code"
                android:textColor="@color/colorBlackDesable"
                android:textSize="@dimen/font_large" />

            <EditText
                android:id="@+id/editMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center"
                android:hint="@string/hint_edit_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_large"
                android:theme="@style/EditTextStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/termConditionCheck"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:checked="true"
                android:theme="@style/checkBoxStyle" />

            <TextView
                android:id="@+id/readTermTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_read_term"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_minsmall" />

            <TextView
                android:id="@+id/termConditionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dip"
                android:text="@string/text_term_condition"
                android:textColor="@color/colorTextForgotPin"
                android:textSize="@dimen/font_minsmall" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSendOtp"
            android:layout_width="match_parent"
            android:layout_height="55dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/bg_buttons"
            android:text="@string/btn_send_otp"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_xxlarge" />
    </LinearLayout>
</ScrollView>